--- a/src/sections/bottom-banner.liquid
+++ b/src/sections/bottom-banner.liquid
@@ -1,27 +1,17 @@
-<div class="section bottom-banner" v-if="isBottomBannerVisible"  style="background-color:{{ section.settings.background_color  }}">
-  <div class="container">
-    <div class="columns">
-      <div class="column">
-        <p class="promotion-title" style="color:{{ section.settings.text_color  }}">{{section.settings.title}}</p>
-      </div>
-      <div class="column">
-        <div class="columns promotion-code">
+<bottom-banner background-color="{{ section.settings.background_color }}">
+  <template #title>
+    <p class="promotion-title" style="color:{{ section.settings.text_color  }}">{{section.settings.title}}</p>
+  </template>
 
-          {% for block in section.blocks %}
-          <div class="column">
-            <h5 style="color:{{ section.settings.text_color  }}">{{block.settings.title}}</h5>
-            <span>{{block.settings.text}}</span>
-          </div>
-          {% endfor %}
-
-        </div>
+  <template #items>
+    {% for block in section.blocks %}
+      <div class="column">
+        <h5 style="color:{{ section.settings.text_color  }}">{{block.settings.title}}</h5>
+        <span>{{block.settings.text}}</span>
       </div>
-    </div>  
-    <a @click="hideBottomBanner" href="javascript:;" class="close">
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="20px" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="20px" xml:space="preserve"><g id="_x37_12-_close__x2C__cross__x2C__cancel__x2C_"><g><line style="fill:none;stroke:#fff;stroke-width:13.4167;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:2.6131;" x1="486.21" x2="26.739" y1="26.814" y2="486.139"/><line style="fill:none;stroke:#fff;stroke-width:13.4167;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:2.6131;" x1="486.21" x2="26.739" y1="486.139" y2="26.814"/></g></g><g id="Layer_1"/></svg>
-    </a>
-  </div>
-</div>
+    {% endfor %}
+  </template>
+</bottom-banner>
 
 {% schema %}
 {
