--- a/src/templates/customers/register.liquid
+++ b/src/templates/customers/register.liquid
@@ -1,51 +1,70 @@
-<h1>{{ 'customer.register.title' | t }}</h1>
+<div class="section register">
+  <div class="container">
+    <h1>{{ 'customer.register.title' | t }}</h1>
 
-{% form 'create_customer' %}
-  {{ form.errors | default_errors }}
+    <div class="signup-form box">
+      {% form 'create_customer' %}
+        {{ form.errors | default_errors }}
 
-  <label for="FirstName" class="label-hidden">
-    {{ 'customer.register.first_name' | t }}
-  </label>
-  <input type="text"
-    name="customer[first_name]"
-    id="FirstName"
-    placeholder="{{ 'customer.register.first_name' | t }}"
-    autofocus
-    {% if form.first_name %}value="{{ form.first_name }}"{% endif %}>
+        <div class="field">
+          <label for="FirstName">
+            {{ 'customer.register.first_name' | t }}
+          </label>
+          <input type="text"
+            name="customer[first_name]"
+            id="FirstName"
+            autofocus
+            {% if form.first_name %}value="{{ form.first_name }}"{% endif %}
+            class="input">
+        </div>
 
-  <label for="LastName" class="label-hidden">
-    {{ 'customer.register.last_name' | t }}
-  </label>
-  <input type="text"
-    name="customer[last_name]"
-    id="LastName"
-    placeholder="{{ 'customer.register.last_name' | t }}"
-    {% if form.last_name %}value="{{ form.last_name }}"{% endif %}>
+        <div class="field">
+          <label for="LastName">
+            {{ 'customer.register.last_name' | t }}
+          </label>
+          <input type="text"
+            name="customer[last_name]"
+            id="LastName"
+            {% if form.last_name %}value="{{ form.last_name }}"{% endif %}
+            class="input">
+        </div>
 
-  <label for="Email" class="label-hidden">
-    {{ 'customer.register.email' | t }}
-  </label>
-  <input type="email"
-    name="customer[email]"
-    id="Email"
-    class="{% if form.errors contains 'email' %}input-error{% endif %}"
-    placeholder="{{ 'customer.register.email' | t }}"
-    value="{% if form.email %}{{ form.email }}{% endif %}"
-    spellcheck="false"
-    autocomplete="off"
-    autocapitalize="off">
+        <div class="field">
+          <label for="Email">
+            {{ 'customer.register.email' | t }}
+          </label>
+          <input type="email"
+            name="customer[email]"
+            id="Email"
+            class="{% if form.errors contains 'email' %}input-error{% endif %} input"
+            value="{% if form.email %}{{ form.email }}{% endif %}"
+            spellcheck="false"
+            autocomplete="off"
+            autocapitalize="off">
+        </div>
 
-  <label for="CreatePassword" class="label-hidden">
-    {{ 'customer.register.password' | t }}
-  </label>
-  <input type="password"
-    name="customer[password]"
-    id="CreatePassword"
-    class="{% if form.errors contains 'password' %}input-error{% endif %}"
-    placeholder="{{ 'customer.register.password' | t }}">
+        <div class="field">
+          <label for="CreatePassword">
+            {{ 'customer.register.password' | t }}
+          </label>
+          <input type="password"
+            name="customer[password]"
+            id="CreatePassword"
+            class="{% if form.errors contains 'password' %}input-error{% endif %} input">
+        </div>
 
-  <p>
-    <input type="submit" value="{{ 'customer.register.submit' | t }}" class="button">
-  </p>
-  <a href="{{ shop.url }}">{{ 'customer.register.cancel' | t }}</a>
-{% endform %}
+        <div class="field">
+          <input type="checkbox" id="customer[accepts_marketing]" name="customer[accepts_marketing]">
+          <label for="customer[accepts_marketing]">{{ 'customer.register.accepts_marketing' | t }}</label>
+        </div>
+
+        <div class="field">
+          <input type="submit" value="{{ 'customer.register.sign_up' | t }}" class="button">
+          <p class="returning-customer">
+            {{ 'customer.register.returning_customer_label' | t }} {{ 'customer.register.sign_in_html' | t | customer_login_link }}
+          </p>
+        </div>
+      {% endform %}
+    </div>
+  </div>
+</div>
