--- a/src/templates/customers/login.liquid
+++ b/src/templates/customers/login.liquid
@@ -1,87 +1,81 @@
-<div class="form-success hide" data-reset-success>
-  {{ 'customer.recover_password.success' | t }}
-</div>
-
-<div data-login-form>
-  {% form 'customer_login' %}
+<login>
+  <template #title>
     <h1>{{ 'customer.login.title' | t }}</h1>
+  </template>
 
-    {{ form.errors | default_errors }}
+  <template #login-box="{ toggleForgotPassword }">
+    {% form 'customer_login' %}
+      {{ form.errors | default_errors }}
+      <div class="field">
+        <label for="CustomerEmail" class="label-hidden">
+          {{ 'customer.login.email' | t }}
+        </label>
+        <input type="email"
+               name="customer[email]"
+               id="CustomerEmail"
+               class="{% if form.errors contains 'email' %}input-error{% endif %} input"
+               spellcheck="false"
+               autocomplete="off"
+               autocapitalize="off"
+               autofocus>
+      </div>
+      <div class="field">
+        {% if form.password_needed %}
+          <label for="CustomerPassword" class="label-hidden">
+            {{ 'customer.login.password' | t }}
+            {% if form.password_needed %}
+              <a href="javascript:;" @click="toggleForgotPassword">{{ 'customer.login.forgot_password' | t }}</a>
+            {% endif %}
+          </label>
 
-    <label for="CustomerEmail" class="label-hidden">
-      {{ 'customer.login.email' | t }}
-    </label>
-    <input type="email"
-           name="customer[email]"
-           id="CustomerEmail"
-           class="{% if form.errors contains 'email' %}input-error{% endif %}"
-           placeholder="{{ 'customer.login.email' | t }}"
-           spellcheck="false"
-           autocomplete="off"
-           autocapitalize="off"
-           autofocus>
+          <input type="password"
+                 name="customer[password]"
+                 id="CustomerPassword"
+                 class="{% if form.errors contains 'password' %}input-error{% endif %} input">
+        {% endif %}
+      </div>
+      <input type="submit" class="button" value="{{ 'customer.login.sign_in' | t }}">
+      <p class="register">
+        {{ 'customer.login.new_customer_label' | t }} {{ 'customer.login.sign_up_html' | t | customer_register_link }}
+      </p>
 
-    {% if form.password_needed %}
-      <label for="CustomerPassword" class="label-hidden">
-        {{ 'customer.login.password' | t }}
-      </label>
-      <input type="password"
-             name="customer[password]"
-             id="CustomerPassword"
-             class="{% if form.errors contains 'password' %}input-error{% endif %}"
-             placeholder="{{ 'customer.login.password' | t }}">
-    {% endif %}
+      {% comment %}
+        <a href="/">{{ 'customer.login.cancel' | t }}</a>
+        <a href="/account/register">
+          {{ 'layout.customer.create_account' | t }}
+        </a>
+      {% endcomment %}
+    {% endform %}
+  </template>
 
-    <input type="submit" class="button" value="{{ 'customer.login.sign_in' | t }}">
+  <template #reset-password-box="{ toggleForgotPassword }">
+    <h2>{{ 'customer.recover_password.title' | t }}</h2>
 
-    <a href="/">{{ 'customer.login.cancel' | t }}</a>
+    {% form 'recover_customer_password' %}
+      {{ form.errors | default_errors }}
 
-    <a href="/account/register">
-      {{ 'layout.customer.create_account' | t }}
-    </a>
+      <div class="field">
+        <label for="RecoverEmail" class="label-hidden">
+          {{ 'customer.recover_password.email' | t }}
+        </label>
+        <input type="email"
+               name="email"
+               id="RecoverEmail"
+               spellcheck="false"
+               autocomplete="off"
+               autocapitalize="off"
+               class="input">
+      </div>
 
-    {% if form.password_needed %}
-      <a href="#recover" data-recover-toggle>{{ 'customer.login.forgot_password' | t }}</a>
-    {% endif %}
-  {% endform %}
+      <p class="note">{{ 'customer.recover_password.subtext' | t }}</p>
 
-</div>
+      <input type="submit" class="button" value="{{ 'customer.recover_password.submit' | t }}">
 
-<div class="hide" data-recover-form>
-  <h2>{{ 'customer.recover_password.title' | t }}</h2>
-  <p>{{ 'customer.recover_password.subtext' | t }}</p>
+      <span class="or-cancel">or</span>
 
-  {% form 'recover_customer_password' %}
-    {{ form.errors | default_errors }}
-
-    {% if form.posted_successfully? %}
-      <span class="hide" data-form-state></span>
-    {% endif %}
-
-    <label for="RecoverEmail" class="label-hidden">
-      {{ 'customer.recover_password.email' | t }}
-    </label>
-    <input type="email"
-           name="email"
-           id="RecoverEmail"
-           placeholder="{{ 'customer.recover_password.email' | t }}"
-           spellcheck="false"
-           autocomplete="off"
-           autocapitalize="off">
-
-    <input type="submit" class="button" value="{{ 'customer.recover_password.submit' | t }}">
-
-    <button type="button" data-recover-toggle>
-      {{ 'customer.recover_password.cancel' | t }}
-    </button>
-  {% endform %}
-
-</div>
-
-{% if shop.checkout.guest_login %}
-  <h2>{{ 'customer.login.guest_title' | t }}</h2>
-
-  {% form 'guest_login' %}
-    <input type="submit" class="button" value="{{ 'customer.login.guest_continue' | t }}">
-  {% endform %}
-{% endif %}
+      <button type="button" class="cancel" @click="toggleForgotPassword">
+        {{ 'customer.recover_password.cancel' | t }}
+      </button>
+    {% endform %}
+  </template>
+</login>
