--- a/src/templates/customers/reset_password.liquid
+++ b/src/templates/customers/reset_password.liquid
@@ -1,30 +1,32 @@
-<div class="form-reset-password">
-  {% form 'reset_customer_password' %}
-
+<div class="section reset-password">
+  <div class="container">
     <h1>{{ 'customer.reset_password.title' | t }}</h1>
+    <div class="reset-password-form box">
+      {% form 'reset_customer_password' %}
+        <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
 
-    <p>{{ 'customer.reset_password.subtext' | t: email: email }}</p>
+        {{ form.errors | default_errors }}
+        <div class="field">
+          <label for="ResetPassword" class="label-hidden">
+            {{ 'customer.reset_password.password' | t }}
+          </label>
+          <input type="password"
+            name="customer[password]"
+            id="ResetPassword"
+            class="{% if form.errors contains 'password' %}input-error{% endif %} input">
+        </div>  
+        <div class="field">
+          <label for="PasswordConfirmation" class="label-hidden">
+            {{ 'customer.reset_password.password_confirm' | t }}
+          </label>
+          <input type="password"
+            name="customer[password_confirmation]"
+            id="PasswordConfirmation"
+            class="{% if form.errors contains 'password_confirmation' %}input-error{% endif %} input">
+        </div>
 
-    {{ form.errors | default_errors }}
-
-    <label for="ResetPassword" class="label-hidden">
-      {{ 'customer.reset_password.password' | t }}
-    </label>
-    <input type="password"
-      name="customer[password]"
-      id="ResetPassword"
-      class="{% if form.errors contains 'password' %}input-error{% endif %}"
-      placeholder="{{ 'customer.reset_password.password' | t }}">
-
-    <label for="PasswordConfirmation" class="label-hidden">
-      {{ 'customer.reset_password.password_confirm' | t }}
-    </label>
-    <input type="password"
-      name="customer[password_confirmation]"
-      id="PasswordConfirmation"
-      class="{% if form.errors contains 'password_confirmation' %}input-error{% endif %}"
-      placeholder="{{ 'customer.reset_password.password_confirm' | t }}">
-
-    <input type="submit" class="button" value="{{ 'customer.reset_password.submit' | t }}">
-  {% endform %}
+        <input type="submit" class="button" value="{{ 'customer.reset_password.submit' | t }}">
+      {% endform %}
+    </div>
+  </div>
 </div>
