Feature: product feature section

--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -61,13 +61,13 @@
       <template #shoes-types-desktop>
         <div class="shoes-types desktop">
           <ul>
-            <li>{{ 'running.svg' | asset_url | img_tag }}<span>Running</span></li>
-            <li>{{ 'walking.svg' | asset_url | img_tag }}<span>Walking</span></li>
-            <li>{{ 'biking.svg' | asset_url | img_tag }}<span>Biking</span></li>
-            <li>{{ 'hiking.svg' | asset_url | img_tag }}<span>Hiking</span></li>
-            <li>{{ 'sport.svg' | asset_url | img_tag }}<span>Sports</span></li>
-            <li>{{ 'marathon.svg' | asset_url | img_tag }}<span>Marathons</span></li>
-            <li>{{ 'kids.svg' | asset_url | img_tag }}<span>Kids</span></li>
+            <li><img class="lazyload" data-src="{{ 'running.svg' | asset_url }}"><span>Running</span></li>
+            <li><img class="lazyload" data-src="{{ 'walking.svg' | asset_url }}"><span>Walking</span></li>
+            <li><img class="lazyload" data-src="{{ 'biking.svg' | asset_url }}"><span>Biking</span></li>
+            <li><img class="lazyload" data-src="{{ 'hiking.svg' | asset_url }}"><span>Hiking</span></li>
+            <li><img class="lazyload" data-src="{{ 'sport.svg' | asset_url }}"><span>Sports</span></li>
+            <li><img class="lazyload" data-src="{{ 'marathon.svg' | asset_url }}"><span>Marathons</span></li>
+            <li><img class="lazyload" data-src="{{ 'kids.svg' | asset_url }}"><span>Kids</span></li>
           </ul>
         </div>
       </template>
@@ -75,13 +75,13 @@
       <template #shoes-types-mobile>
         <div class="shoes-types mobile">
           <ul>
-            <li>{{ 'running.svg' | asset_url | img_tag }}<span>Running</span></li>
-            <li>{{ 'walking.svg' | asset_url | img_tag }}<span>Walking</span></li>
-            <li>{{ 'biking.svg' | asset_url | img_tag }}<span>Biking</span></li>
-            <li>{{ 'hiking.svg' | asset_url | img_tag }}<span>Hiking</span></li>
-            <li>{{ 'sport.svg' | asset_url | img_tag }}<span>Sports</span></li>
-            <li>{{ 'marathon.svg' | asset_url | img_tag }}<span>Marathons</span></li>
-            <li>{{ 'kids.svg' | asset_url | img_tag }}<span>Kids</span></li>
+            <li><img class="lazyload" data-src="{{ 'running.svg' | asset_url }}"><span>Running</span></li>
+            <li><img class="lazyload" data-src="{{ 'walking.svg' | asset_url }}"><span>Walking</span></li>
+            <li><img class="lazyload" data-src="{{ 'biking.svg' | asset_url }}"><span>Biking</span></li>
+            <li><img class="lazyload" data-src="{{ 'hiking.svg' | asset_url }}"><span>Hiking</span></li>
+            <li><img class="lazyload" data-src="{{ 'sport.svg' | asset_url }}"><span>Sports</span></li>
+            <li><img class="lazyload" data-src="{{ 'marathon.svg' | asset_url }}"><span>Marathons</span></li>
+            <li><img class="lazyload" data-src="{{ 'kids.svg' | asset_url }}"><span>Kids</span></li>
           </ul>
         </div>
       </template>
