--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -4,6 +4,7 @@
 .product {
   background-color: #f1f2f2;
   padding: 0;
+  border-bottom: 1px solid #f1f2f2;
 
   @media screen and (min-width: $tablet) {
     padding: 1.5rem 1.5rem;
@@ -504,3 +505,104 @@
 @keyframes fadeInDown {0%{opacity:0;transform:translate3d(0,-20px,0)}to{opacity:1;transform:none}}.fadeInDown{animation-name:fadeInDown}
 @keyframes zoomOut {0%{opacity:1}50%{opacity:0;transform:scale3d(.3,.3,.3)}to{opacity:0}}.zoomOut{animation-name:zoomOut}
 
+.product-feature {
+  padding: 26px 0;
+
+  @media screen and (min-width: $tablet) {
+    border-bottom: 1px solid #bdbdbd;
+  }
+
+  .container {
+    @media screen and (min-width: $tablet) {
+      max-width: 992px;
+    }
+  }
+
+  ul {
+    max-width: 992px;
+    margin: 0;
+    display: flex;
+
+    li {
+      float: left;
+      flex: none;
+      width: 33.3%;
+      text-align: center;
+
+      @media screen and (min-width: $tablet) {
+        float: none;
+        text-align: left;
+      }
+
+      &:last-child {
+        @media screen and (min-width: $tablet) {
+          width: 40%;
+        }
+      }
+
+      span {
+        display: inline-block;
+        border: 1px solid #bdbdbd;
+        border-radius: 50%;
+        width: 44px;
+        height: 44px;
+        text-align: center;
+        padding-top: 10px;
+        color: #bdbdbd;
+        margin-right: 20px;
+        float: left;
+        font-size: 20px;
+        font-family: "neuzeitgroteskblack";
+        line-height: 1.2;
+        display: none;
+
+        @media screen and (min-width: $tablet) {
+          display: block;
+        }
+      }
+
+      p {
+        width: auto;
+        display: inline-block;
+        font-size: 16px;
+        line-height: normal;
+        font-family: neuzeit_grotesk_regular;
+        font-weight: normal;
+
+        &.text-mobile {
+          display: block;
+        }
+
+        &.text-desktop {
+          display: none;
+        }
+
+        @media screen and (min-width: $tablet) {
+          display: inline-block;
+          font-size: 20px;
+          font-family: "neuzeitgroteskblack";
+          line-height: 1.2;
+
+          &.text-mobile {
+            display: none;
+          }
+
+          &.text-desktop {
+            display: block;
+          }
+        }
+      }
+
+      img {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 10px;
+        width: 30px;
+
+        @media screen and (min-width: $tablet) {
+          display: none;
+        }
+      }
+    }
+  }
+}
