--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -713,121 +713,163 @@
     }
   }
 
-  .top-video {
-    padding: 0px 10px 40px 10px;
-  }
-
-  h2 {
-    font-size: 28px;
-    color: #008ffd;
-    text-align: center;
-    letter-spacing: 0.1px;
-    font-family: "neuzeitgroteskblack";
-    margin-bottom: 30px;
-  }
-
-  .videos {
-    padding: 0 10px 90px 10px;
-  }
-
-  .videos .column {
-    height: 430px;
-    position: relative;
-    overflow: hidden;
-    padding: 0px;
-    margin: 10px;
-
-    @media screen and (min-width: $tablet) {
-      height: 530px;
+  .about {
+    .top-video {
+      padding: 0px 10px 40px 10px;
     }
 
-    video {
-      position: absolute;
-      bottom: -70px;
-
-      &.v3fix {
-        @media screen and (min-width: $desktop) {
-          bottom: -240px;
-        }
-      }
-    }
-
-    p {
-      position: absolute;
-      bottom: 0px;
-      width: 100%;
+    h2 {
+      font-size: 28px;
+      color: #008ffd;
       text-align: center;
-      padding: 10px 30px 40px 30px;
-      font-weight: bold;
-      font-size: 16px;
-      font-family: "neuzeit_grotesk_regular";
-      color: black;
+      letter-spacing: 0.1px;
+      font-family: "neuzeitgroteskblack";
+      margin-bottom: 30px;
     }
-  }
 
-  .highlights {
-    background-color: #f7f7f7;
+    .videos {
+      padding: 0 10px 90px 10px;
+    }
 
-    .columns {
-      display: flex;
-      flex-direction: column-reverse;
+    .videos .column {
+      height: 430px;
+      position: relative;
+      overflow: hidden;
+      padding: 0px;
+      margin: 10px;
 
       @media screen and (min-width: $tablet) {
-        flex-direction: unset;
+        height: 530px;
+      }
+
+      video {
+        position: absolute;
+        bottom: -70px;
+
+        &.v3fix {
+          @media screen and (min-width: $desktop) {
+            bottom: -240px;
+          }
+        }
+      }
+
+      p {
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
+        text-align: center;
+        padding: 10px 30px 40px 30px;
+        font-weight: bold;
+        font-size: 16px;
+        font-family: "neuzeit_grotesk_regular";
+        color: black;
       }
     }
 
-    .column.media {
-      padding: 0px;
+    .highlights {
+      background-color: #f7f7f7;
+
+      .columns {
+        display: flex;
+        flex-direction: column-reverse;
+
+        @media screen and (min-width: $tablet) {
+          flex-direction: unset;
+        }
+      }
+
+      .column.media {
+        padding: 0px;
+      }
+
+      .column.text {
+        text-align: center;
+        max-width: 420px;
+        margin: 0 auto;
+        padding: 20px 0;
+
+        @media screen and (min-width: $tablet) {
+          text-align: left;
+          max-width: none;
+        }
+      }
+
+      @media screen and (min-width: $tablet) {
+        .container {
+          padding: 60px 0px;
+        }
+      }
+
+      .column.media, .column.text {
+        @media screen and (min-width: $tablet) {
+          padding: 0px 20px;
+        }
+      }
+
+      p.caption {
+        font-size: 12px;
+        font-weight: bold;
+        letter-spacing: 1px;
+        font-family: 'neuzeit_grotesk_regular';
+      }
+
+      h3 {
+        color: #0090fc;
+        font-family: 'neuzeit_grotesk_regular';
+        font-size: 26px;
+
+        @media screen and (min-width: $tablet) {
+          font-size: 36px;
+          line-height: normal;
+          margin: 10px 0;
+        }
+      }
+
+      p {
+        font-family: 'neuzeit_grotesk_light';
+        font-size: 18px;
+        color: black;
+      }
+    }
+  }
+
+  .specs {
+    .columns {
+      padding: 0 30px;
     }
 
     .column.text {
       text-align: center;
-      max-width: 420px;
-      margin: 0 auto;
-      padding: 20px 0;
 
       @media screen and (min-width: $tablet) {
         text-align: left;
-        max-width: none;
       }
-    }
-
-    @media screen and (min-width: $tablet) {
-      .container {
-        padding: 60px 0px;
-      }
-    }
-
-    .column.media, .column.text {
-      @media screen and (min-width: $tablet) {
-        padding: 0px 20px;
-      }
-    }
-
-    p.caption {
-      font-size: 12px;
-      font-weight: bold;
-      letter-spacing: 1px;
-      font-family: 'neuzeit_grotesk_regular';
     }
 
     h3 {
-      color: #0090fc;
-      font-family: 'neuzeit_grotesk_regular';
-      font-size: 26px;
-
-      @media screen and (min-width: $tablet) {
-        font-size: 36px;
-        line-height: normal;
-        margin: 10px 0;
-      }
+      font-family: neuzeit_grotesk_regular;
+      font-size: 28px;
+      font-weight: bold;
+      color: #333333;
+      letter-spacing: 2px;
+      margin-bottom: 20px;
     }
 
     p {
-      font-family: 'neuzeit_grotesk_light';
-      font-size: 18px;
-      color: black;
+      font-family: neuzeit_grotesk_light;
+      font-weight: normal;
+      font-size: 15px;
+    }
+
+    img {
+      max-width: 420px;
+      margin: 0 auto;
+      display: block;
+
+      @media screen and (min-width: $tablet) {
+        max-width: none;
+        width: 100%;
+      }
     }
   }
 }
